<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">247 Doctor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_title">247 Doctor Service Enduser Agreement</string>
    <string name="eula_refuse">Decline</string>
    <string name="main_heading">247 Doctor Service</string>
    <string name="callbtn_txt">CALL NOW</string>
      <string name="callbackbtn_txt">CALL BACK</string>
    
    <string name="bookbtn_txt">BOOK NOW</string>
    <string name="teleconbtn_txt">TELECONSULT*</string>
    
    <string name="loginbtn_txt">LOGIN</string>
     <string name="logoutbtn_txt">LOG OUT</string>
      <string name="homebtn_txt">HOME</string>
    <string name="regbtn_txt">REGISTER</string>
    <string name="book_heading">BOOK NOW</string>
    <string name="login_header">Login</string>
     <string name="callback_header">Call Back</string>
     <string name="telecon_label">Coming soon</string>
    <string name="loginbtn">Login</string>
    <string name="callbackbtn">Call Me</string>
    <string name="register_header">REGISTER</string>
    <string name="registerbtn">Register</string>
    <string name="dob">Date of Birth</string>
    <string name="gentxt">Gender</string>
    <string name="strtxt">Street</string>
    <string name="suburbtxt">Suburb</string>
    <string name="postcodetxt">Postcode</string>
    <string name="fnametxt">First Name</string>
    <string name="lastnametxt">Last Name</string>
    <string name="emailtxt">Email</string>
    <string name="contactNumbertxt">Contact Number</string>
    <string name="dobtxt">Date of Birth</string>
    <string name="ediNumbertxt">Medicare Number</string>
    <string name="refNumtxt">Refference Number</string>
    <string name="expiryDatetxt">Expiry Date</string>
    <string name="symptonstxt">Symtoms</string>
    <string name="PreDoctxt">Preffered Doctor</string>
    <string name="PreTimetxt">Preffered Time</string>
    <string name="reasontxt">Reason for this time</string>
    <string name="PreDocGentxt">Preffered Gender</string>
     <string name="lnameRtxt">Last Name</string>
      <string name="fnameRtxt">First Name</string>
    
    
    
    <string name="unametxt">User Name</string>
    <string name="passtxt">Password</string>
    
    <string name="unameRtxt">Email</string>
    <string name="passRtxt">Password</string>
    <string name="passRContxt">Confirm Password</string>

</resources>