<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
       android:background="@drawable/customborder"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/headerimage" />

        <TextView
            android:id="@+id/headingOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Your request has been added successfully. Our friendly customer service will get back to you soon."
            android:textColor="#027647"
            android:textSize="20sp" />

        <Button
            android:id="@+id/call_btn"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbutton"
            android:paddingLeft="20dp"
            android:shadowColor="#014b2e"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/callbtn_txt"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/book"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbutton"
            android:paddingLeft="20dp"
            android:shadowColor="#014b2e"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/bookbtn_txt"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbutton"
            android:paddingLeft="20dp"
            android:shadowColor="#014b2e"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/logoutbtn_txt"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" 
            />

        <Button
            android:id="@+id/home_btn"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbutton"
            android:paddingLeft="20dp"
            android:shadowColor="#014b2e"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/homebtn_txt"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" 
            />
    </LinearLayout>

</ScrollView>