<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/regScroll"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/customborder"
        android:gravity="center"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
         android:focusable="false"
        android:padding="10dp" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/headerimage" />

      

        <LinearLayout
            android:id="@+id/sectionLog1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/registerheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/register_header"
                android:textColor="#027647"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/sectionLog2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/regbanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <LinearLayout
                    android:id="@+id/layoutRfName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textRFname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:text="@string/fnameRtxt"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/fRName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutRlName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textRlname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:text="@string/lnameRtxt"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/lRName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutRUName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textRUname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/unameRtxt"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/userName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutRpass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textRUpass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/passRtxt"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutRpassCon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textRConUpass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/passRContxt"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/passwordConfirm"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </LinearLayout>

                <Button
                    android:id="@+id/reg_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/roundedbutton"
                    android:gravity="center"
                   
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                   
                    android:shadowColor="#014b2e"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/registerbtn"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>