<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/customborder"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/headerimage" />

        <LinearLayout
            android:id="@+id/sectionLog1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/sectionlogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/callbackheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/callback_header"
                    android:textColor="#027647"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/sectionLog2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/callbackbanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="10dp"
                        android:visibility="invisible" />

                    <LinearLayout
                        android:id="@+id/layoutUName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textFirstname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fnameRtxt"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/firstNamecbtxt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="FIRST NAME" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutlastname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textlastname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/lnameRtxt"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/lastnamecbtxt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="Last Name" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutcontactnumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textcontactnumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/contactNumbertxt"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/contactnumcbtxt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="Contact Number"
                            android:inputType="number"
                            android:maxLength="10" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/callbackbtn"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/roundedbutton"
                        android:gravity="center"
                        android:shadowColor="#014b2e"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/callbackbtn"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>