<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/customborder"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/headerimage" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dp"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="#e60000"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/bulkbill_txt"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="BULK BILLED (Free Service*)"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dp"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:background="#027647"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/doctor_txt"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Doctor visits your home"
                    android:textColor="#ffdd53"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        
        <Button
            android:id="@+id/callnow_btn"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedbutton"
            android:drawableLeft="@drawable/ic_phone_in_talk_white_24dp"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:shadowColor="#014b2e"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/callbtn_txt"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- android:drawableLeft="@drawable/phoneicon" -->
        
           <Button
            android:id="@+id/callback_btn"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedbutton"
            android:drawableLeft="@drawable/ic_ring_volume_white_24dp"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:shadowColor="#014b2e"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/callbackbtn_txt"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/booknow_btn"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedbutton"
             android:drawableLeft="@drawable/ic_edit_white_24dp"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:shadowColor="#014b2e"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/bookbtn_txt"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold" />

        
            <Button
            android:id="@+id/telecon_btn"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedbutton"
             android:drawableLeft="@drawable/ic_dvr_white_24dp"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:shadowColor="#014b2e"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/teleconbtn_txt"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/login_btn"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedbutton"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:shadowColor="#014b2e"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/loginbtn_txt"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedbutton"
             android:drawableLeft="@drawable/ic_person_add_white_24dp"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:paddingLeft="20dp"
            android:shadowColor="#014b2e"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/regbtn_txt"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold" />

       

        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
           
            android:src="@drawable/carimagenewpic" />

        <TextView
            android:id="@+id/site"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
          
            android:gravity="center"
            android:text=""
            android:textColor="#027647"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="10dp"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:background="#027647"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/cusNo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="Free call: 1800 247 477"
                    android:textColor="#ffdd53"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>